--- a/index.html
+++ b/index.html
@@ -5,11 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
     <title>Duolingo - La mejor manera de aprender un idioma a nivel mundial</title>
+    <link rel="icon" href="https://d35aaqx5ub95lt.cloudfront.net/favicon.ico">
 </head>
 <body>
-   <div class="content">    <!--Declaración de un div content-->
-
-   </div>
+   <div class="content"></div> <!--Declaración de un div content-->
 
    <script src="script.js"></script>
 </body>
