Acabo de darme cuenta de la existencia de SVG :D

--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
 <body>
    <div class="content"></div> <!--Declaración de un div content-->
 
+   <div id="carrusel"></div>
+
    <script src="script.js"></script>
 </body>
 </html>
