--- a/index.html
+++ b/index.html
@@ -8,7 +8,17 @@
     <link rel="icon" href="https://d35aaqx5ub95lt.cloudfront.net/favicon.ico">
 </head>
 <body>
-   <div class="content"></div> <!--Declaración de un div content-->
+   <div class="content">
+   </div> <!--Declaración de un div content-->
+
+   <div class="container">
+    <img src="images/man.gif"/> 
+    <div class="text-buttons">
+    <h1>¡La forma divertida, efectiva y gratis de aprender un idioma!</h1>
+    <button id="botonUno" type="button">Iniciar sesión</button>
+    <button id="botonDos" type="button">Hola</button>
+</div>
+   </div>
 
    <script src="script.js"></script>
 </body>
