Inicio del modulo de las banderas - Pagína principal
Estoy cansado jefe

--- a/index.html
+++ b/index.html
@@ -20,6 +20,29 @@
 </div>
    </div>
 
+   <div class="flags">
+    <nav class="flecha-container">
+        <svg class="flecha-izquierda" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+            <path d="M10 2L4 8L10 14" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2"/>
+        </svg>
+        <div class="banderas">
+            <ul style="transform: translateX(0px);">
+            <li>
+                <a href="ingles" class="">
+                    <svg viewBox="0 0 82 66" style="height: 28.9756px; width: 36px;">
+                        <image height="3168" href="https://d35aaqx5ub95lt.cloudfront.net/vendor/87938207afff1598611ba626a8c4827c.svg" width="82" xlink:href="https://d35aaqx5ub95lt.cloudfront.net/vendor/87938207afff1598611ba626a8c4827c.svg"></image>
+                    </svg>
+                    <span>English</span>
+                </a>
+            </li>
+        </ul>
+        </div>
+        <svg class="flecha-derecha" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+            <path d="M10 2L16 8L10 14" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2"/>
+        </svg>
+    </nav>
+</div>
+
    <script src="script.js"></script>
 </body>
 </html>
