--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                     <svg viewBox="0 0 82 66" style="height: 28.9756px; width: 36px;">
                         <image height="3168" href="https://d35aaqx5ub95lt.cloudfront.net/vendor/87938207afff1598611ba626a8c4827c.svg" width="82" xlink:href="https://d35aaqx5ub95lt.cloudfront.net/vendor/87938207afff1598611ba626a8c4827c.svg"></image>
                     </svg>
-                    <span>English</span>
+                    <span style="text-decoration: none;">English</span>
                 </a>
             </li>
             <li>
