--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,45 +8,16 @@
     <title>Duolingo - La mejor manera de aprender un idioma a nivel mundial</title>
     <link rel="icon" href="https://d35aaqx5ub95lt.cloudfront.net/favicon.ico">
 </head>
+
 <body>
-   <div class="content">
-   </div> <!--Declaración de un div content-->
+    <div class="content">
+    </div> <!--Declaración de un div content-->
 
-   <div class="container">
-    <img src="images/man.gif"/> 
-    <div class="text-buttons">
-    <h1>¡La forma divertida, efectiva y gratis de aprender un idioma!</h1>
-    <button id="botonUno" type="button">Iniciar sesión</button>
-    <button id="botonDos" type="button">Hola</button>
-</div>
-   </div>
+    <div id="myContainer"></div>
 
-   <div class="flags">
-    <nav class="flecha-container">
-        <svg class="flecha-izquierda" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
-            <path d="M10 2L4 8L10 14" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2"/>
-        </svg>
-        <div class="banderas">
-            <ul style="transform: translateX(0px);">
-            <li>
-                <a href="ingles" class="">
-                    <svg viewBox="0 0 82 66" style="height: 28.9756px; width: 36px;">
-                        <image height="3168" href="https://d35aaqx5ub95lt.cloudfront.net/vendor/87938207afff1598611ba626a8c4827c.svg" width="82" xlink:href="https://d35aaqx5ub95lt.cloudfront.net/vendor/87938207afff1598611ba626a8c4827c.svg"></image>
-                    </svg>
-                    <span style="text-decoration: none;">English</span>
-                </a>
-            </li>
-            <li>
-                
-            </li>
-        </ul>
-        </div>
-        <svg class="flecha-derecha" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
-            <path d="M10 2L16 8L10 14" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2"/>
-        </svg>
-    </nav>
-</div>
+    <div id="flags"></div>
 
-   <script src="script.js"></script>
+    <script src="script.js"></script>
 </body>
+
 </html>
